Fix stretching of renderings when canvas resizing

--- a/packages/react_frontend_app/src/styles/Canvas.css
+++ b/packages/react_frontend_app/src/styles/Canvas.css
@@ -4,7 +4,7 @@ canvas {
 
   display: block;
   border: solid black;
-  border-width: 1px 10px 1px 1px;
+  border-width: 1px 10px 1px 0px;
   /* border-left: 10px solid black; */
   width: 500px;
   height: 907px;
