--- a/packages/react_frontend_app/src/styles/Slider.css
+++ b/packages/react_frontend_app/src/styles/Slider.css
@@ -1,4 +1,5 @@
 .handler {
-  background-color: black;
+  background-color: orange;
+  border: 1px solid black;
   width: 10px;
 }
